Nov 15, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.8

Nov 14, 2007 - chris
o bugfix: the parameters for memory mapped I/O on win32 did not create 
    private copies and therefore the file could be damaged if an operation
    aborted

Nov 10, 2007 - chris
o Environments now support a configurable number of databases; the default
    is 16, but files with a pagesize of 16kb can have up to 508 databases.
    See parameter HAM_PARAM_MAX_ENV_DATABASES for ham_env_create_ex.

Nov 09, 2007 - chris
o bugfix: when deleting a database from an Environment (ham_env_erase_db), 
    the database name was not removed

Nov 06, 2007 - chris
o added a new function ham_env_get_database_names(), which returns all 
	database names in an environment.

Nov 01, 2007 - chris
o implemented zlib-based compression; a new function was added:
    ham_enable_compression()
o added a new option --disable-compression for configure; this option does not
    compile/link ham_enable_compression.

Nov 01, 2007 - chris
o added generic record filters - ham_add_record_filter and 
    ham_remove_record_filter
o added a new option --disable-encryption for configure; this option does not
    compile/link ham_env_enable_encryption.

Oct 28, 2007 - chris
o implemented AES encryption; a new function was added: 
	ham_env_enable_encryption()
o fixed bug in configure.in; on some systems, the call to getpagesize()
    was not declared correctly. i hope it works now.

Oct 26, 2007 - chris
o finished the C++ API in include/ham/hamsterdb.hpp and added two new C++
	samples - db6.cpp and env3.cpp.

Oct 21, 2007 - chris
o added generic page filters - ham_env_add_page_filter and 
	ham_env_remove_page_filter

Oct 18, 2007 - chris
o bugfix: when moving a cursor through duplicates and the cache was
	exhausted, an assert was triggered - fixed

Oct 16, 2007 - chris
o bugfix: ham_close in an environment could lead to a segmentation fault, 